--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-# REACT_APP_BASE_URL = 'http://localhost:5000/api'
-REACT_APP_BASE_URL = 'https://comic-strip.onrender.com/api/'
+REACT_APP_BASE_URL = 'http://195.62.32.147:8080/api'
+# REACT_APP_BASE_URL = 'https://comic-strip.onrender.com/api/'
